Add footer with links and developer information
Added footer with developer credits and links.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en-us">
 
 <head>
     <meta charset="UTF-8">
@@ -32,8 +32,17 @@
         </div>
     </div>
 
-
-
+    <footer class="rodape"> 
+        <div class="rodape__esquerda"> 
+            <h1 class="rodape__titulo">Developed by Francis.</h1> 
+        </div> 
+        <ul class="lista-rodape"> 
+            <li class="lista-rodape__titulo">See more</li> 
+            <li class="lista-rodape__item"> <a href="https://github.com/" class="rodape__link">GitHub.</a> </li> 
+            <li class="lista-rodape__item"> <a href="https://vercel.com/francis-projects-0ee8cbb4" class="rodape__link">Vercel.</a> </li> 
+            <li class="lista-rodape__item"> <a href="https://www.linkedin.com/in/francis-de-moura-pereira-277147256/" class="rodape__link">LinkedIn.</a> </li> 
+        </ul> 
+    </footer>
 
     <script src="app.js" defer></script>
 </body>
